[package]
name = "pyo3-log"
version = "0.7.0"
authors = ["Michal 'vorner' Vaner <vorner@vorner.cz>"]
description = "Logging bridge from pyo3 native extension to python"
documentation = "https://docs.rs/pyo3-log"
repository = "https://github.com/vorner/pyo3-log"
readme = "README.md"
keywords = ["pyo3", "python", "logging"]
categories = ["development-tools::debugging"]
edition = "2018"
license = "Apache-2.0/MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "~1"
# It's OK to ask for std on log, because pyo3 needs it too.
log = { version = "~0.4", default-features = false, features = ["std"] }
pyo3 = { git = "https://github.com/pyo3/pyo3", rev = "86ce4d1a1", default-features = false, version = "~0.17", features = ["macros"] }

[dev-dependencies]
pyo3 = { git = "https://github.com/pyo3/pyo3", rev = "86ce4d1a1", version = "0.17", features = ["auto_initialize"] }
